welcome.lessons.welcome.bat.bool2.LastDigit2.scala.error
lastDigit:3: error: x is already defined as value x
		case (x,y,x)	=> return true
                          ^