welcome.lessons.welcome.bat.bool2.LastDigit2.scala.code
def lastDigit(a:Int, b:Int, c:Int):Boolean = {
	(a%10,b%10,c%10) match {
		case (x,y,x)	=> return true
		case (_,_,_)						=> return false
	}
}